--- a/style.css
+++ b/style.css
@@ -1,6 +1,206 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Inter', sans-serif;
-    font-family: 'Poppins', sans-serif;
+/* General CSS */
+* {
+  margin: 0;
+  padding: 0;
+}
+a {
+  text-decoration: none;
+}
+h1,
+h2,
+h3 {
+  font-family: "Inter", sans-serif;
+}
+ul {
+  margin: 0;
+  padding: 0;
+}
+ul li {
+  list-style-type: none;
+}
+p {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+}
+section {
+  margin-bottom: 145px;
+}
+/* Global Class */
+.text-white {
+  color: #fff;
+}
+.text-center {
+  text-align: center;
+}
+.mx-auto {
+  margin: 0 auto;
+}
+.theme-btn {
+  border: 0;
+  padding: 16px 20.5px;
+  height: 56px;
+  background: #ff5959;
+  border-radius: 5px;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 24px;
+  color: #fff;
+  font-family: "Inter", sans-serif;
+  text-transform: capitalize;
+}
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+.title {
+  margin-bottom: 60px;
+}
+.title h2 {
+  font-weight: 700;
+  font-size: 45px;
+  line-height: 54px;
+  color: #121212;
+  margin-bottom: 20px;
+}
+.title p {
+  color: #707070;
+}
+
+/* Top Banner */
+.top-banner {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 670px;
+  display: flex;
+  align-items: center;
+  background-image: linear-gradient(
+      360deg,
+      #121212 0%,
+      rgba(18, 18, 18, 0) 100%
+    ),
+    url("./images/banner.png");
+}
+
+.top-banner .card {
+  max-width: 826px;
+}
+
+.top-banner .card h1 {
+  font-size: 65px;
+  line-height: 79px;
+  font-weight: 700;
+  margin-bottom: 25px;
+}
+
+.top-banner .card p {
+  margin-bottom: 45px;
+}
+
+/* Donate Amount */
+.donate-amount .card {
+  max-width: 765px;
+}
+.amount ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 70px;
+}
+.amount ul li {
+  height: 123px;
+  background: #fafafa;
+  border-radius: 5px;
+  width: 133px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: 2px solid #fafafa;
+}
+.amount ul li.active {
+  background: #ffeeee;
+  border: 2px solid #ff5959;
+}
+.amount ul li span {
+  margin: 0 auto;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+  color: #707070;
+  font-family: "Inter", sans-serif;
+}
+.amount ul li.active span {
+  color: #ff5959;
+}
+.other-ammounts form input {
+  width: 100%;
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+  border-bottom: 1px solid #dadada;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  text-align: center;
+  padding-bottom: 15px;
+  margin-bottom: 30px;
+}
+.other-ammounts form input::placeholder {
+  color: #b3b3b3;
+  opacity: 1; /* Firefox */
+}
+.other-ammounts form input:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: #b3b3b3;
+}
+.other-ammounts form input::-ms-input-placeholder {
+  /* Microsoft Edge */
+  color: #b3b3b3;
+}
+.other-ammounts form input:focus {
+  outline: -webkit-focus-ring-color auto 0;
+}
+
+/* Donate Plan */
+
+.donate-plan .card-main {
+  max-width: 1130px;
+}
+.donate-reasons {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.donate-reasons .card {
+  width: 360px;
+  height: 352px;
+  border-radius: 5px;
+  padding: 0px 25px;
+  margin: 10px;
+}
+.donate-reasons .card:first-child {
+  background: rgba(79, 157, 166, 0.1);
+}
+.donate-reasons .card:nth-child(2) {
+  background: rgba(255, 89, 89, 0.1);
+}
+.donate-reasons .card:last-child {
+  background: #fff4d6;
+}
+.donate-reasons .card-icon img {
+}
+.donate-reasons .card-text h3 {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 36px;
+  color: #121212;
+  font-family: "Poppins", sans-serif;
+}
+.donate-reasons .card-text p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #707070;
 }
