--- a/style.css
+++ b/style.css
@@ -3,40 +3,50 @@
   margin: 0;
   padding: 0;
 }
+
 a {
   text-decoration: none;
 }
+
 h1,
 h2,
 h3 {
   font-family: "Inter", sans-serif;
 }
+
 ul {
   margin: 0;
   padding: 0;
 }
+
 ul li {
   list-style-type: none;
 }
+
 p {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 28px;
 }
+
 section {
   margin-bottom: 145px;
 }
+
 /* Global Class */
 .text-white {
   color: #fff;
 }
+
 .text-center {
   text-align: center;
 }
+
 .mx-auto {
   margin: 0 auto;
 }
+
 .theme-btn {
   border: 0;
   padding: 16px 20.5px;
@@ -50,13 +60,16 @@ section {
   font-family: "Inter", sans-serif;
   text-transform: capitalize;
 }
+
 .container {
   max-width: 1440px;
   margin: 0 auto;
 }
+
 .title {
   margin-bottom: 60px;
 }
+
 .title h2 {
   font-weight: 700;
   font-size: 45px;
@@ -64,6 +77,7 @@ section {
   color: #121212;
   margin-bottom: 20px;
 }
+
 .title p {
   color: #707070;
 }
@@ -76,11 +90,9 @@ section {
   min-height: 670px;
   display: flex;
   align-items: center;
-  background-image: linear-gradient(
-      360deg,
+  background-image: linear-gradient(360deg,
       #121212 0%,
-      rgba(18, 18, 18, 0) 100%
-    ),
+      rgba(18, 18, 18, 0) 100%),
     url("./images/banner.png");
 }
 
@@ -103,12 +115,14 @@ section {
 .donate-amount .card {
   max-width: 765px;
 }
+
 .amount ul {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-bottom: 70px;
 }
+
 .amount ul li {
   height: 123px;
   background: #fafafa;
@@ -119,10 +133,12 @@ section {
   justify-content: space-between;
   border: 2px solid #fafafa;
 }
+
 .amount ul li.active {
   background: #ffeeee;
   border: 2px solid #ff5959;
 }
+
 .amount ul li span {
   margin: 0 auto;
   font-weight: 700;
@@ -131,9 +147,11 @@ section {
   color: #707070;
   font-family: "Inter", sans-serif;
 }
+
 .amount ul li.active span {
   color: #ff5959;
 }
+
 .other-ammounts form input {
   width: 100%;
   border-top: 0;
@@ -147,18 +165,20 @@ section {
   padding-bottom: 15px;
   margin-bottom: 30px;
 }
+
 .other-ammounts form input::placeholder {
   color: #b3b3b3;
-  opacity: 1; /* Firefox */
+  opacity: 1;
 }
+
 .other-ammounts form input:-ms-input-placeholder {
-  /* Internet Explorer 10-11 */
   color: #b3b3b3;
 }
+
 .other-ammounts form input::-ms-input-placeholder {
-  /* Microsoft Edge */
   color: #b3b3b3;
 }
+
 .other-ammounts form input:focus {
   outline: -webkit-focus-ring-color auto 0;
 }
@@ -168,11 +188,13 @@ section {
 .donate-plan .card-main {
   max-width: 1130px;
 }
+
 .donate-reasons {
   display: flex;
   align-items: center;
   justify-content: space-around;
 }
+
 .donate-reasons .card {
   width: 360px;
   height: 352px;
@@ -180,17 +202,19 @@ section {
   padding: 0px 25px;
   margin: 10px;
 }
+
 .donate-reasons .card:first-child {
   background: rgba(79, 157, 166, 0.1);
 }
+
 .donate-reasons .card:nth-child(2) {
   background: rgba(255, 89, 89, 0.1);
 }
+
 .donate-reasons .card:last-child {
   background: #fff4d6;
 }
-.donate-reasons .card-icon img {
-}
+
 .donate-reasons .card-text h3 {
   font-weight: 600;
   font-size: 24px;
@@ -198,9 +222,165 @@ section {
   color: #121212;
   font-family: "Poppins", sans-serif;
 }
+
 .donate-reasons .card-text p {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
   color: #707070;
+}
+
+/* News & Article */
+
+.news-main {
+  max-width: 1130px;
+}
+
+.news-blog {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.news-blog .card {
+  max-width: 360px;
+}
+
+.news-blog .card-image img {
+  width: 100%;
+}
+
+.news-blog .card-body {
+  background: #fafafa;
+  padding: 25px 25px 35px 25px;
+}
+
+.news-blog .date-info {
+  display: flex;
+  padding-bottom: 25px;
+}
+
+.news-blog .date {
+  width: 71px;
+  height: 71px;
+  background: #ffeeee;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-right: 15px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+}
+
+.news-blog .date span:first-child {
+  border-bottom: 1px solid;
+}
+
+.news-blog h3 {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 36px;
+  color: #121212;
+  font-family: "Poppins", sans-serif;
+}
+
+.news-blog ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.news-blog ul li {
+  color: #707070;
+  font-family: "Inter", sans-serif;
+  font-size: 10px;
+}
+
+.news-blog p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #707070;
+  padding-bottom: 30px;
+}
+
+.news-blog a {
+  padding: 10px;
+  font-size: 14px;
+}
+
+/* Updates */
+
+.updates {}
+
+.updates-main {
+  max-width: 810px;
+}
+
+.updates-form {
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #FFF4D6;
+}
+
+.updates-form form {}
+
+.updates-form form input::placeholder {
+  color: #AA9F9F;
+  font-weight: 600;
+  opacity: 1;
+}
+
+.updates-form form input:-ms-input-placeholder {
+  color: #AA9F9F;
+  font-weight: 600;
+}
+
+.updates-form form input::-ms-input-placeholder {
+  color: #AA9F9F;
+  font-weight: 600;
+}
+
+.updates-form form input:focus {
+  outline: -webkit-focus-ring-color auto 0;
+}
+
+.updates-form form input {
+  width: 275px;
+  height: 46px;
+  background: #D9D9D9;
+  border-radius: 5px 0px 0px 5px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  border: 0;
+  padding-left: 10px;
+  line-height: 48px;
+}
+
+.updates-form form button {
+  width: 157px;
+  height: 46px;
+  background: #FF5959;
+  border-radius: 0px 5px 5px 0px;
+  border: 0;
+  color: #fff;
+  margin-left: -15px;
+  line-height: 48px;
+  font-size: 16px;
+}
+
+footer {
+  background: #0B0D17;
+  padding: 50px;
+}
+
+footer p {
+  font-size: 14px;
+  color: #707070;
+
 }
